--- a/src/App.css
+++ b/src/App.css
@@ -53,5 +53,15 @@ body.light{
 section.container{
 	padding: 50px 145px;
 }
-
+.mouseeffect{
+    width: 1px;
+    height: 1px;
+    box-shadow: 0 0 80px 30px rgba(255, 255, 255, 0.3);
+    z-index: 1000;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    position: fixed;
+	margin-top: 0 !important;
+}
 
