--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,6 @@ body{
 	font-family: panfram;
 }
 body.light{
-/*	background-color: #0000002b;*/
 	background-color: #fff;
 }
 .container{
@@ -64,4 +63,27 @@ section.container{
     position: fixed;
 	margin-top: 0 !important;
 }
-
+.skeleton{
+	animation:  animate-skeleton 1.5s linear infinite alternate ;
+}
+@keyframes animate-skeleton{
+	0%{background-color: #121631;}
+	100%{background-color: #5c92c1;}
+}
+.skeleton-text{
+	width: 100%;
+	height: 20px;
+	border-radius: 3px;
+	display: block;
+	margin: 0 auto;
+}
+.skeleton-text-last{
+	width: 75%;
+}
+.skeleton-title{
+	width: 75%;
+}
+.skeleton-text-project-des{
+	margin: 3px 0;
+	height: 15px;
+}
