--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,10 +1,3 @@
-
-section.customer-feedback{
-	background-color: var(--bg-second-color);
-}
-.light section.customer-feedback{
-	background-color: #eee;
-}
 section.customer-feedback .box-wrapper{
 	display: grid;
 	align-items: center;
@@ -54,6 +47,10 @@ section.customer-feedback .box-wrapper .box .comma svg{
 section.contactme{
 	text-align: center;
 	color: var(--white);
+	background-color: var(--bg-second-color);
+}
+.light section.contactme{
+	background-color: #eee;
 }
 section.contactme .form-wrapper div.sub-title span{
 	font-size: 30px;
@@ -73,14 +70,14 @@ section.contactme  .form-wrapper p.main-sub-title{
 
 section.contactme .form-wrapper{
 	margin-top: 50px;
-	background-color: var(--bg-second-color);
+	background-color: var(--bg-color);
 	padding: 50px 100px;
 	border-radius: 5px;
 	position: relative;
 	z-index: 1;
 }
 .light section.contactme .form-wrapper{
-	background-color: #eee;
+	background-color: #fff;
 }
 section.contactme .form-wrapper  form{
 	width: 100%;
@@ -115,14 +112,14 @@ section.contactme .form-wrapper  form  div.input-container input{
 	margin: 20px 0;
 	border: none;
 	outline: none;
-	background-color: var(--bg-color);
+	background-color: var(--bg-second-color);
 	color: #8a8a8a;
 	font-size: 16px;
 	padding-left: 20px;
 }
 .light section.contactme .form-wrapper  form  div.input-container textarea,
 .light section.contactme .form-wrapper  form  div.input-container input{
-	background-color: var(--white);
+	background-color: #eee;
 	color: var(--black);
 }
 section.contactme .form-wrapper  form  div.input-container label{
