'site_updated_2024_sep_02'

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
 	transition-property: color, background-color;
 	transition-duration: 0.3s;
 }
+html {
+    scroll-behavior: smooth;
+}
+
 :root{
 	--black: #605b5b;
 	--white: #ffffff;
